--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Lightning but not rain</h1>
+			<h1>Lightning but no rain</h1>
 		</header>
 			<section id="content">
 				<canvas id="Lightning" data-processing-sources="Lightning.pde">
